--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: .  # Este es el directorio raíz de tu sitio
+          path: .  # Asegúrate de que esté el punto (directorio raíz)
 
   deploy:
     needs: build
