--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: Upload artifact
+      - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: .  # Asegúrate de que esté el punto (directorio raíz)
+          path: .  # Directorio raíz del sitio
 
   deploy:
     needs: build
